--- a/TimePDE.tex
+++ b/TimePDE.tex
@@ -18,7 +18,7 @@ y_{n+1} & = & y_{n} + hf(t,y_{n}) \label{eq:simpExEuler}
 
 \subsection{Example 1}
 
-Consider the function $y(t) = \sin (t)$ and its time derivative, $\dot{y}(t) = \cos (t)$. The numerical solution for different time steps are plotted in Fig.~\ref{fig:IVP1}.
+Consider the function $y(t) = \sin (t)$ and its time derivative, $\dot{y}(t) = \cos (t)$. The numerical solution for different time steps are plotted in Fig.~\ref{fig:IVP1}. As clearly seen, the error reduces with the size of the time step---a smaller time step returns a numerical result that is closer to the ideal solution.
 \begin{figure}[!b]
 \centering
 \includegraphics[scale=1.0]{figs/eulerTest}
